testdata/typechecker/error/classes/portfolio_DupeParamMethodIncompat.java
// Tests that duplicate and incompatible method parameters error.

int main() {
    return 0;
}

int f(int x, boolean x) {
    return 0;
}
